# vision-board

./: .gitignore  main.py  make_datasert_csv.py  pyproject.toml
src/: datasets.py  embedder.py
src/encoders/: __init__.py  clip.py  depth_anything_v2.py  dinov2.py  factory.py  resnet.py  strategy.py
src/reducers/: __init__.py  factory.py  pca.py  strategy.py  tsne.py
