[project]
name = "vision-board"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "open-clip-torch>=2.29.1",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "streamlit>=1.52.2",
    "transformers>=4.57.3",
]
